# ghash

./: README.md  pyproject.toml
docs/images/: ghash-demo-01.webm
ghash/: __main__.py  dnd_label.py  hasher.py  main.py  mainwindow.py  models.py  ui_mainwindow.py  utils.py
ghash/ui/: mainwindow.ui
tests/: test_1.py  test_3.py
