[tool.poetry]
name = "ghash"
version = "0.1.0"
description = ""
authors = ["Pui Kit Li <59538991+PKLJack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "^7.2.0"
PySide6 = "^6.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
